# stats2mqtt

./: Cargo.toml
src/: main.rs
src/config/: homeassistant.rs  intervals.rs  mod.rs  mqtt.rs
src/discovery/: mod.rs
src/modules/: battery.rs  cpu.rs  memory.rs  mod.rs  power.rs
