[package]
name = "stats2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
dotenv = "0.15.0"
futures = "0.3.28"
hardware-id = "0.3.0"
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
systemstat = { git = "https://github.com/dangreco/systemstat", features = ["serde"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
